--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .navbar>.container {
 
-    border: 2px solid rgba(5, 0, 255, 1);
+    /* border: 2px solid rgba(5, 0, 255, 1); */
 }
 
 .navbar>.container>a {
